Fix dark mode for document rendering

--- a/summarine/static/css/summary.css
+++ b/summarine/static/css/summary.css
@@ -376,6 +376,10 @@ th {
 	display: inline-block;
 }
 
+.summary .box, .summary td {
+	color: #111111;
+}
+
 /*.summary .box *, .night .summary .box *
 {
 	color: #111;
@@ -825,6 +829,10 @@ span.highlight.warn {
 
 	background-color: rgba(255, 255, 255, 0.1);
 	color: grey;
+}
+
+.dark .summary .page-page {
+	color: #ffffff;
 }
 
 .summary .page-content {
